--- a/project.html
+++ b/project.html
@@ -62,7 +62,7 @@
 
   <nav>
     <a href="about.html">About</a>
-    <a href="project.html">Projects</a>
+    <a href="project.html">Projects & Works</a>
     <a href="journal.html">Journal</a>
     <a href="Gallery.html">Gallery</a>
     <a href="contact.html">Contact</a>
