--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@
     <a href="about.html">About</a>
     <a href="project.html">Projects & Works</a>
     <a href="journal.html">Journal</a>
-    <a href="Gallery.html">Gallery</a>
+    <a href="gallery.html">Gallery</a>
     <a href="contact.html">Contact</a>
   </nav>
 
