--- a/content.html
+++ b/content.html
@@ -26,7 +26,7 @@
                 <a href="project.html">Projects</a>
                 <a href="content.html">Content</a>
                 <a href="journal.html">Journal</a>
-                <a href="Gallery.html">Gallery</a>
+                <a href="gallery.html">Gallery</a>
                 <a href="contact.html">Contact</a>
             
       </nav>
