--- a/gallery.html
+++ b/gallery.html
@@ -84,7 +84,7 @@
     <a href="about.html">About</a>
     <a href="project.html">Projects & Works</a>
     <a href="journal.html">Journal</a>
-    <a href="Gallery.html">Gallery</a>
+    <a href="gallery.html">Gallery</a>
     <a href="contact.html">Contact</a>
   </nav>
 
